--- a/sistema/noticias.html
+++ b/sistema/noticias.html
@@ -163,6 +163,7 @@
           <li class="nav-item"><a class="nav-link active" href="../home.php">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="noticias.html">Noticias</a></li>
           <li class="nav-item"><a class="nav-link" href="../sistema/tienda.html">Tienda</a></li>
+          <li class="nav-item"><a class="nav-link" href="../sistema/cesta.html">Cesta</a></li>
         </ul>
       </div>
     </div>
